<resources>
    <string name="app_name">Tenis Lapangan</string>
    <string name="title_activity_about">Tentang Aplikasi</string>
    <string name="des">
        "Aplikasi Tenis Lapangan ini berisi tentang berbagai teknik dasar dalam permainan tenis lapangan,"
        "disertai dengan buku, gambar dan deskripsi serta kiat - kiat berlatih.\n\n"
        "Aplikasi ini didedikasikan untuk Keluarga, Rekan Dosen, dan Mahasiswa Fakultas Ilmu Keolahrgaan."
        "Semoga aplikasi ini memberikan manfaat positif bagi kita semua khususnya masyarakat olahraga."
    </string>
    <string name="nama">Drs. Supriatna, M.Pd</string>
    <string name="supriyatna">
        "Drs. Supriatna, M.Pd Lahir di Jakarta Pada Tanggal 12 April 1964."
        "Menempuh jenjang S1 Sarjana Pendidikan Kepelatihan Olahraga Pada Tahun 1989 di IKIP Bandung"
        "dan telah menyelesaikan Studi Magister (S2) Pendidikan Olahraga di UPI Bandung Pada Tahun 2012.\n"
        "Saat ini Drs. Supriatna, M.Pd Merupakan Dosen Tetap PNS di Jurusan Kepelatihan Olahraga, Fakultas ilmu Keolahragaan, Universitas Negeri Malang. \n\n"
        "Bidang Keahlian yang ditekuni adalah Teori dan Praktik Tenis Lapangan. Psikologi Olahraga, Pembentukkan Fisik dan Program Latihan."
    </string>

    <string name="action_settings">Settings</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="panduan">Panduan Aplikasi</string>

    <string name="olinguito">Olinguito</string>
    <string name="menu">Menu</string>
    <string name="dev">Developer</string>
    <string name="copy">Copyright</string>
    <string name="versi">Build Version</string>
    <string name="details">Detail</string>
    <string name="term">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Button Menu Materi</string>
    <string name="slide_1_subtitle">Item Logo Materi</string>
    <string name="slide_1_desc">Menu materi berisi kumpulan materi tenis lapangan.</string>

    <string name="slide_2_title">Button Menu Presentasi</string>
    <string name="slide_2_subtitle">Item Logo Presentasi</string>
    <string name="slide_2_desc">Menu presentasi berisi kumpulan materi tenis lapangan.</string>

    <string name="slide_3_title">Button Menu Latihan</string>
    <string name="slide_3_subtitle">Item Logo Latihan</string>
    <string name="slide_3_desc">Menu latihan berisi dua soal perwasitan  tenis lapangan.</string>

    <string name="slide_4_title">Button Menu Video</string>
    <string name="slide_4_subtitle">Button Kategori Video</string>
    <string name="slide_4a_subtitle">Item Logo Video</string>
    <string name="slide_4_desc">Menu video berisi video pembelajaran tenis lapangan.</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
</resources>
