<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/img_width_height"
            android:layout_height="@dimen/img_width_height"
            android:src="@drawable/video" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide_4_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/slide_4_desc"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_desc" />


       <GridLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:columnCount="2"
           android:layout_gravity="center">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center">

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/vicam"
                   android:layout_marginTop="20dp"
                   android:layout_gravity="center"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:text="@string/slide_4_subtitle"
                   android:textColor="@android:color/white"
                   android:textSize="@dimen/slide_desc"
                   android:textStyle="bold"
                   android:layout_gravity="center" />
           </LinearLayout>

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:layout_gravity="center"
               android:layout_margin="20dp">

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/play"
                   android:layout_marginTop="20dp"
                   android:layout_gravity="center"/>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="10dp"
                   android:text="@string/slide_4a_subtitle"
                   android:textColor="@android:color/white"
                   android:textSize="@dimen/slide_desc"
                   android:textStyle="bold"
                   android:layout_gravity="center"/>
           </LinearLayout>

       </GridLayout>

    </LinearLayout>
</RelativeLayout>