<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.learning.tennislearning.AboutActivity"
    tools:showIn="@layout/activity_about"
    android:background="@color/background">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@android:color/white"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="4dp"
                card_view:cardUseCompatPadding="true"
                android:layout_margin="10dp">

                <LinearLayout
                    android:id="@+id/linearLayoutCardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbarCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        app:popupTheme="@style/Theme.AppCompat.Light"
                        app:subtitleTextAppearance="@style/Card.Subtitle"
                        app:theme="@style/ToolbarCard"
                        app:titleTextAppearance="@style/Card.Title"
                        android:title="@string/nama"/>

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/olinguito"
                        android:src="@drawable/owner"
                        android:layout_gravity="center"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="toggleDetails"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:text="@string/details"
                            android:gravity="center_vertical"
                            android:textColor="@android:color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/imageViewExpand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:src="@mipmap/more"
                            android:contentDescription="@string/details" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/linearLayoutDetails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/textViewInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/supriyatna"
                            android:textSize="16sp"
                            android:layout_margin="5dp" />
                    </LinearLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Deskripsi Aplikasi"
                        android:textSize="10pt"
                        android:textColor="@color/black"
                        android:layout_margin="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/des"
                        android:textSize="16sp"
                        android:layout_margin="5dp"/>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                android:layout_margin="10dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Others Info"
                            android:textSize="10pt"
                            android:textColor="@color/black"
                            android:layout_margin="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/code"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/code"/>

                        <Button
                            android:id="@+id/copy"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/copy"/>

                        <Button
                            android:id="@+id/versi"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:padding="10dp"
                            android:layout_margin="10dp"
                            android:background="@drawable/versi"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.NestedScrollView>
